# yolov5_ros2

./: README.md  README_EN.md  package.xml  setup.cfg  setup.py
config/: camera_info.yaml
world/: test_yolo.world
yolov5_ros2/: cv_tool.py  yolo_detect_2d.py
